[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/TimeMachine.gd" type="Script" id=1]
[ext_resource path="res://assets/art/tm-1.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/tm_bgm.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/timetravel.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/Ubuntu-R.ttf"

[sub_resource type="DynamicFont" id=5]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 4 )

[node name="TimeMachine" type="Node2D"]
script = ExtResource( 1 )

[node name="bg1" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 86.0
margin_right = 1024.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer4" type="CenterContainer" parent="Control/VBoxContainer"]
margin_top = 172.0
margin_right = 1024.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/CenterContainer4"]
margin_left = 317.0
margin_top = 26.0
margin_right = 707.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Choose how far forward to travel"

[node name="CenterContainer" type="CenterContainer" parent="Control/VBoxContainer"]
margin_top = 258.0
margin_right = 1024.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="Button" parent="Control/VBoxContainer/CenterContainer"]
margin_left = 455.0
margin_top = 18.0
margin_right = 584.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 6 )
text = "1 Year"

[node name="CenterContainer2" type="CenterContainer" parent="Control/VBoxContainer"]
margin_top = 344.0
margin_right = 1024.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="Button" parent="Control/VBoxContainer/CenterContainer2"]
margin_left = 455.0
margin_top = 18.0
margin_right = 584.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 7 )
text = "2 Years"

[node name="CenterContainer3" type="CenterContainer" parent="Control/VBoxContainer"]
margin_top = 430.0
margin_right = 1024.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="Button" parent="Control/VBoxContainer/CenterContainer3"]
margin_left = 455.0
margin_top = 18.0
margin_right = 584.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 8 )
text = "3 Years"

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 516.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="tt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

